--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build && npm run copy-templates",
     "copy-templates": "copyfiles -u 1 src/mail/templates/**/*.hbs dist/mail/templates",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/main",
+    "start": "node dist/main && copy-templates",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
