--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "init": "npm i",
     "build": "nest build && npm run copy-templates",
-    "copy-templates": "copyfiles -u 1 src/mail/templates/**/*.hbs dist/mail/templates",
+    "copy-templates": "copyfiles -u 1 src/mail/templates/**/*.hbs app/dist/mail/templates",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/main && copy-templates",
+    "start": "node dist/main",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
